--- a/Aula04-JS-func/mat.html
+++ b/Aula04-JS-func/mat.html
@@ -35,7 +35,7 @@
             <input id="n5" type="number" placeholder="Insira o número">
             <label for="n6">Segundo número</label>
             <input id="n6" type="number" placeholder="Insira o número">
-            <button onclick="divisao()">CALCULAR</button>
+            <button onclick="divisao()">CALCULAR a conta</button>
             <h3 id="resultadoDivisao"></h3>
         </section>
         <section>
