--- a/Aula04-JS-func/index.html
+++ b/Aula04-JS-func/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 id="resultado"></h1>
-    <button onclick="printarProUsuario()">realizar função</button>
+    <button onclick="printarProUsuario()">realizar função agora</button>
     <script src="script.js"></script>
 </body>
 </html>
